# application

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  configure.hpp.in
.github/workflow/: main.yml
.github/workflows/: main.yml
cmake/: compilers.cmake  parameters.cmake  setup_configure.cmake
src/: CMakeLists.txt  application.cpp  application.hpp  command_line.cpp  debugger.cpp  debugger.hpp  exceptions.cpp  exceptions.hpp  global.cpp  global.h  globals.hpp.in  message.cpp  message.hpp  monitor.cpp  monitor.hpp  signal_handler.cpp  signal_handler.hpp
src/debugger/: debugger.cpp  debugger.hpp  debugger_impl.hpp  tester.cpp
tests/: 01.out  01_enter_leave.cpp  01_multiple_output.cpp  01_single_output.cpp  02_multiple_output.cpp  02_single_output.cpp  03_output_to_screen.cpp  A.check  A.out  B.check  B.out  CMakeLists.txt  main.check  main.out
